# raspr

./: CMakeLists.txt  Makefile  a.out  ipc.c  ipc_childs_message_worker.c  ipc_childs_message_worker.h  ipc_logs.h  ipc_message_genrator.c  ipc_message_genrator.h  ipc_pipes.c  ipc_worker.c  ipc_worker.h  pa23.c
pa2/: CMakeLists.txt  Makefile  ipc.c  ipc_childs_message_worker.c  ipc_logs.c  ipc_pipes.c  ipc_pipes.h  pa23.c
pa3/: Makefile  ipc.c  ipc_childs_message_worker.c  ipc_logs.c  ipc_message_genrator.c  ipc_pipes.c  ipc_structs.h  ipc_worker.h  pa23.c
pa4/: CMakeLists.txt  Makefile  ipc.c  ipc_childs_message_worker.c  ipc_childs_message_worker.h  ipc_message_genrator.c  ipc_message_genrator.h  ipc_worker.c  ipc_worker.h  pa234.c  pa2345.h
